# ChangeLog for app-emacs/haskell-mode
# Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/app-emacs/haskell-mode/ChangeLog,v 1.47 2013/05/16 13:25:27 ago Exp $

  16 May 2013; Agostino Sarubbo <ago@gentoo.org> haskell-mode-2.9.1.ebuild:
  Stable for ppc, wrt bug #469884

  15 May 2013; Agostino Sarubbo <ago@gentoo.org> haskell-mode-2.9.1.ebuild:
  Stable for x86, wrt bug #469884

  15 May 2013; Agostino Sarubbo <ago@gentoo.org> haskell-mode-2.9.1.ebuild:
  Stable for amd64, wrt bug #469884

*haskell-mode-2.9.1 (11 Dec 2012)

  11 Dec 2012; Ulrich Müller <ulm@gentoo.org> +haskell-mode-2.9.1.ebuild:
  Version bump, bug 446234.

  13 Aug 2010; Joseph Jezak <josejx@gentoo.org> haskell-mode-2.8.0.ebuild:
  Marked ppc stable for bug #332081.

  12 Aug 2010; Pawel Hajdan jr <phajdan.jr@gentoo.org>
  haskell-mode-2.8.0.ebuild:
  x86 stable wrt bug #332081

  11 Aug 2010; Markos Chandras <hwoarang@gentoo.org>
  haskell-mode-2.8.0.ebuild:
  Stable on amd64 wrt bug #332081

*haskell-mode-2.8.0 (10 Jul 2010)

  10 Jul 2010; Ulrich Mueller <ulm@gentoo.org> +haskell-mode-2.8.0.ebuild:
  Version bump.

  07 Jan 2010; Ulrich Mueller <ulm@gentoo.org>
  -files/51haskell-mode-gentoo.el, -haskell-mode-2.4.ebuild:
  Remove old.

  07 Jan 2010; Brent Baude <ranger@gentoo.org> haskell-mode-2.6.4.ebuild:
  stable ppc, bug 296000

  09 Dec 2009; Markus Meier <maekke@gentoo.org> haskell-mode-2.6.4.ebuild:
  amd64/x86 stable, bug #296000

*haskell-mode-2.7.0 (02 Dec 2009)

  02 Dec 2009; Ulrich Mueller <ulm@gentoo.org> -haskell-mode-2.5.1.ebuild,
  +haskell-mode-2.7.0.ebuild:
  Version bump. Remove old.

*haskell-mode-2.6.4 (07 Nov 2009)

  07 Nov 2009; Ulrich Mueller <ulm@gentoo.org> -haskell-mode-2.6.2.ebuild,
  +haskell-mode-2.6.4.ebuild:
  Version bump. Remove intermediate version.

*haskell-mode-2.6.2 (06 Nov 2009)

  06 Nov 2009; Ulrich Mueller <ulm@gentoo.org>
  -haskell-mode-2.4_p20080826.ebuild, haskell-mode-2.5.1.ebuild,