@@ -1,6 +1,10 @@
 # ChangeLog for app-emacs/haskell-mode
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/app-emacs/haskell-mode/ChangeLog,v 1.47 2013/05/16 13:25:27 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/app-emacs/haskell-mode/ChangeLog,v 1.48 2013/05/16 14:12:30 ulm Exp $
+
+  16 May 2013; Ulrich Müller <ulm@gentoo.org> -haskell-mode-2.6.4.ebuild,
+  -haskell-mode-2.7.0.ebuild:
+  Remove old.
 
   16 May 2013; Agostino Sarubbo <ago@gentoo.org> haskell-mode-2.9.1.ebuild:
   Stable for ppc, wrt bug #469884
